--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+<title>ProMan</title>
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400, 700&subset=latin,latin-ext" rel="stylesheet"
+          type="text/css">
+    <link rel="stylesheet" href="../static/bootstrap.css" type="text/css"
+
 </head>
 <body>
+<header class="container-fluid">
+    <div class="row">
+        <div class="container">
+            <div class="row">
+                <h1 class="col-lg-4">Website logo</h1>
+                <nav class="col-lg-8">
+                    <a href="">menu 1</a>
+                    <a href="">menu 2</a>
+                    <a href="">menu 3</a>
+                    <a href="">menu 4</a>
+                </nav>
+            </div>
+        </div>
+    </div>
+</header>
+
+<ul id="grid-wrapper">
+<a href="/dsad">
+    <li class = "card">
+    <div class = "container-card">jbkjfvnkjkdsjk</div>
+    <div class = "title-bar">
+        <h1 class ="card-title">webstore</h1>
+       <div class ="icon">&times;</div>
+    </div>
+
+</li>
+</a>
+
+</ul>
+
 <script src="static/java.js"></script>
 </body>
 </html>
+
