--- a/static/bootstrap.css
+++ b/static/bootstrap.css
@@ -1027,6 +1027,11 @@ header nav a:hover {
   text-align: left;
 }
 
+.card:hover{
+  background: grey;
+  box-shadow:inset 0 0 0 10px rgba(0,0,0);
+}
+
 .card{
   position:relative;
   display: inline-block;
@@ -1088,4 +1093,25 @@ h1.card-title{
 .container-card {
   color:white;
   font-size:23px;
+}
+
+body {
+  background: #1e62d1;
+}
+
+.button {
+    background-color: cornflowerblue;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+.button:hover {
+
 }
