--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <title>ProMan</title>
 <head>
     <meta charset="UTF-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400, 700&subset=latin,latin-ext" rel="stylesheet"
           type="text/css">
     <link rel="stylesheet" href="../static/bootstrap.css" type="text/css"
@@ -13,7 +14,7 @@
     <div class="row">
         <div class="container">
             <div class="row">
-                <a href="/"> <h1 class="col-lg-4">Teemo to hell</h1> </a>
+                <a href="/"><h1 class="col-lg-4">Teemo to hell</h1></a>
                 <nav class="col-lg-8">
                     <a href="">menu 1</a>
                     <a href="">menu 2</a>
@@ -24,28 +25,15 @@
         </div>
     </div>
 </header>
-
 <ul id="grid-wrapper">
-<a href="/dsad">
-    <li class = "card">
-    <div class = "container-card">jbkjfvnkjkdsjk</div>
-    <div class = "title-bar">
-        <h1 class ="card-title">webstore</h1>
-       <div class ="icon">&times;</div>
-    </div>
 
-</li>
-    <li class = "card">
-    <div class = "container-card"></div>
-    <div class = "title-bar">
-        <h1 class ="card-title">új tábla létrehozása</h1>
-    </div>
-
-</li>
-</a>
+    </li>
+    <li class="card">
+        <div class="container-card"></div>
+        <div class="title-bar">
+            <h1 class="card-title">új tábla létrehozása</h1>
+        </div>
 </ul>
-
-
 <script src="static/java.js"></script>
 </body>
 </html>
