--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,10 @@
 <title>ProMan</title>
 <head>
     <meta charset="UTF-8">
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.1.min.js"></script>
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400, 700&subset=latin,latin-ext" rel="stylesheet"
           type="text/css">
-    <link rel="stylesheet" href="../static/bootstrap.css" type="text/css"
+    <link rel="stylesheet" href="../static/bootstrap.css" type="text/css">
 
 </head>
 <body>
@@ -13,7 +14,7 @@
     <div class="row">
         <div class="container">
             <div class="row">
-                <a href="/"> <h1 class="col-lg-4">Teemo to hell</h1> </a>
+                <a href="/"><h1 class="col-lg-4">Teemo to hell</h1></a>
                 <nav class="col-lg-8">
                     <a href="">menu 1</a>
                     <a href="">menu 2</a>
@@ -25,26 +26,42 @@
     </div>
 </header>
 
-<ul id="grid-wrapper">
-<a href="/dsad">
-    <li class = "card">
-    <div class = "container-card">jbkjfvnkjkdsjk</div>
-    <div class = "title-bar">
-        <h1 class ="card-title">webstore</h1>
-       <div class ="icon">&times;</div>
-    </div>
 
-</li>
-    <li class = "card">
-    <div class = "container-card"></div>
-    <div class = "title-bar">
-        <h1 class ="card-title">új tábla létrehozása</h1>
-    </div>
+<script>
+    $(document).ready(function () {
+        $('.pull-me').click(function () {
+            $('.panel').slideToggle(200);
+        });
 
-</li>
-</a>
-</ul>
 
+        var loading = function (e) {
+            e.preventDefault();
+            e.stopPropagation();
+            e.target.classList.add('loading');
+            e.target.setAttribute('disabled', 'disabled');
+            setTimeout(function () {
+                e.target.classList.remove('loading');
+                e.target.removeAttribute('disabled');
+            }, 1500);
+        };
+
+        var btns = document.querySelectorAll('button');
+        for (var i = btns.length - 1; i >= 0; i--) {
+            btns[i].addEventListener('click', loading);
+        }
+        ;
+    });
+</script>
+
+<div class="panel">
+    <div class="header">Tábla készítése</div>
+    <b>Cím</b>
+    <input id="textform" type="text" name="name" placeholder="Például játék fejlesztési terv">
+    <button data-label="do it!">do it!</button>
+</div>
+<p class="slide">
+<div class="pull-me">Új tábla létrehozása..</div>
+</p>
 
 <script src="static/java.js"></script>
 </body>
