--- a/templates/index.html
+++ b/templates/index.html
@@ -27,37 +27,28 @@
 </header>
 
 
-<script>
-    $(document).ready(function () {
-        $('.pull-me').click(function () {
-            $('.panel').slideToggle(200);
-        });
+<div id="container-head">
+    <p>Személyes táblák</p>
+    <ul id="grid-wrapper">
+
+        <li class="card">
+            <div class="container-card"></div>
+            <div class="title-bar">
+                <h1 class="card-title"></h1>
+            </div>
+        </li>
 
 
-        var loading = function (e) {
-            e.preventDefault();
-            e.stopPropagation();
-            e.target.classList.add('loading');
-            e.target.setAttribute('disabled', 'disabled');
-            setTimeout(function () {
-                e.target.classList.remove('loading');
-                e.target.removeAttribute('disabled');
-            }, 1500);
-        };
+    </ul></div>
 
-        var btns = document.querySelectorAll('button');
-        for (var i = btns.length - 1; i >= 0; i--) {
-            btns[i].addEventListener('click', loading);
-        }
-        ;
-    });
-</script>
 
 <div class="panel">
     <div class="header">Tábla készítése</div>
     <b>Cím</b>
     <input id="textform" type="text" name="name" placeholder="Például játék fejlesztési terv">
-    <button data-label="do it!">do it!</button>
+
+    <button id="save-button" data-label="do it!">do it!</button>
+
 </div>
 <p class="slide">
 <div class="pull-me">Új tábla létrehozása..</div>
