--- a/static/bootstrap.css
+++ b/static/bootstrap.css
@@ -1033,7 +1033,7 @@ header nav a:hover {
 #grid-wrapper{
   width: 100%;
   margin: 0 auto 20px auto;
-  text-align: center;
+  text-align: left;
 }
 
 
@@ -1070,7 +1070,7 @@ header nav a:hover {
   background: rgba(0,0,0,0.3)
 }
 
-h1.card-title{
+.card-title{
   top: 50%;
   transform: translateY(-50%);
   position:relative;
