--- a/templates/index.html
+++ b/templates/index.html
@@ -32,11 +32,16 @@
     <ul id="grid-wrapper">
 
         <li class="card">
+            <a href="/b" id="0">
+
             <div class="container-card"></div>
             <div class="title-bar">
-                <h1 class="card-title"></h1>
+                <div class="card-title">Üdvözlő kártya</div>
             </div>
+        </a>
         </li>
+
+
 
 
     </ul></div>
@@ -45,10 +50,11 @@
 <div class="panel">
     <div class="header">Tábla készítése</div>
     <b>Cím</b>
+<form>
     <input id="textform" type="text" name="name" placeholder="Például játék fejlesztési terv">
 
     <button id="save-button" data-label="do it!">do it!</button>
-
+</form>
 </div>
 <p class="slide">
 <div class="pull-me">Új tábla létrehozása..</div>
