--- a/templates/tables.html
+++ b/templates/tables.html
@@ -3,9 +3,10 @@
 <title>ProMan</title>
 <head>
     <meta charset="UTF-8">
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.1.min.js"></script>
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400, 700&subset=latin,latin-ext" rel="stylesheet"
           type="text/css">
-    <link rel="stylesheet" href="../static/bootstrap.css" type="text/css"
+    <link rel="stylesheet" href="../static/bootstrap.css" type="text/css">
 
 </head>
 <body>
@@ -24,10 +25,10 @@
         </div>
     </div>
 
-
+    <!--<ul id="grid-wrapper"></ul>-->
 
 </header>
 
-
+<script src="static/java.js"></script>
 </body>
 </html>
