--- a/static/bootstrap.css
+++ b/static/bootstrap.css
@@ -1037,7 +1037,9 @@ header nav a:hover {
 }
 
 
+
 #container-head p{
+  margin-left:10px;
   text-align: left;
   font-size:30px;
 }
@@ -1064,11 +1066,12 @@ header nav a:hover {
 
 .title-bar{
   width:100%;
-  heigth: 50px;
+  height: 50px;
   position: absolute;
   bottom: 0;
   background: rgba(0,0,0,0.3)
 }
+
 
 .card-title{
   top: 50%;
@@ -1082,13 +1085,7 @@ header nav a:hover {
   /*pointer-events: none;*/
 }
 
-.title-bar{
-  width:100%;
-  height:50px;
-  position: absolute;
-  bottom:0;
-  background: rgba(0,0,0,0.3);
-}
+
 
 .icon {
   width:24px;
@@ -1114,13 +1111,8 @@ body {
   background: #1e62d1;
 }
 
-.pull-me{
-    -webkit-box-shadow: 0 0 8px ;
-    -moz-box-shadow: 0 0 8px black;
-    box-shadow: 0 0 8px black;
-    cursor:pointer;
-}
 .panel {
+    margin-left:10px;
 	background: white;
     background-size:90% 90%;
     width: 250px;
@@ -1129,14 +1121,8 @@ body {
     font-size:19px;
     font-family:garamond,times-new-roman,serif;
 }
-.panel p{
-    text-align:center;
-}
 
-.panel button{
-  position: relative;
-  left: 133px;
-}
+
 
 .panel div.header{
     text-align: center;
@@ -1146,12 +1132,19 @@ body {
 	margin:0;
 	padding:0;
 }
+
+
 .pull-me {
+    margin-left:10px;
+    -webkit-box-shadow: 0 0 8px ;
+    -moz-box-shadow: 0 0 8px black;
+    box-shadow: 0 0 8px black;
+    cursor:pointer;
 	display:block;
     position:relative;
     width:250px;
     height:50px;
-	font-family:arial,sans-serif;
+	font-family:monospace;
     font-size:14px;
 	color:#ffffff;
     background:#424242;
@@ -1177,6 +1170,7 @@ body {
 button {
 	position:relative;
 	border:0;
+  margin-left:132px;
     margin-top:15px;
 	padding:0;
 	cursor:pointer;
