--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,19 @@
 
 <div id="container-head">
     <p>Személyes táblák</p>
+
+    <div class="panel">
+            <div class="header">Tábla készítése</div>
+            <b>Cím</b>
+        <form>
+            <input id="textform" type="text" name="name" placeholder="Például játék fejlesztési terv">
+
+            <button id="save-button" data-label="do it!">do it!</button>
+        </form>
+    </div>
+        <p class="slide">
+        <div class="pull-me">Új tábla létrehozása..</div></p>
+
     <ul id="grid-wrapper">
 
         <li class="card">
@@ -47,18 +60,7 @@
     </ul></div>
 
 
-<div class="panel">
-    <div class="header">Tábla készítése</div>
-    <b>Cím</b>
-<form>
-    <input id="textform" type="text" name="name" placeholder="Például játék fejlesztési terv">
 
-    <button id="save-button" data-label="do it!">do it!</button>
-</form>
-</div>
-<p class="slide">
-<div class="pull-me">Új tábla létrehozása..</div>
-</p>
 
 <script src="static/java.js"></script>
 </body>
