--- a/templates/index.html
+++ b/templates/index.html
@@ -1,66 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>ProMan</title>
 <head>
-    <meta charset="UTF-8">
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.1.min.js"></script>
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400, 700&subset=latin,latin-ext" rel="stylesheet"
-          type="text/css">
-    <link rel="stylesheet" href="../static/css/bootstrap.css" type="text/css">
+    <title>Proman - Teemo to Hell</title>
+    <meta charset="utf-8">
+    <link rel="shortcut icon" href="static/img/favicon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="static/css/bootstrap.css" rel="stylesheet"/>
+    <link href="static/css/card-animation.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="static/css/style.css" rel="stylesheet"/>
 
 </head>
 <body>
-<header class="container-fluid">
-    <div class="row">
-        <div class="container">
-            <div class="row">
-                <a href="/"><h1 class="col-lg-4">Teemo to hell</h1></a>
-                <nav class="col-lg-8">
-                    <a href="">menu 1</a>
-                    <a href="">menu 2</a>
-                    <a href="">menu 3</a>
-                    <a href="">menu 4</a>
-                </nav>
-            </div>
-        </div>
+
+<div class="jumbotron">
+    <div class="container text-center">
+        <h1>Teemo to hell</h1>
+        <p>Taking notes the easy way</p>
     </div>
-</header>
-
-
-
-<div id="container-head">
-    <p>Személyes táblák</p>
-
-    <div class="panel">
-        <div class="header">Tábla készítése</div>
-        <b>Cím</b>
-        <form>
-            <input id="textform" type="text" name="name" placeholder="Például játék fejlesztési terv">
-
-            <button id="save-button" data-label="do it!">do it!</button>
-        </form>
-    </div>
-    <p class="slide"></p>
-    <div class="pull-me">Új tábla létrehozása..</div>
-
-    <ul id="grid-wrapper">
-
-        <li class="board">
-            <a href="/b" id="0">
-
-                <div class="container-board"></div>
-                <div class="title-bar">
-                    <div class="board-title">Üdvözlő kártya</div>
-                </div>
-            </a>
-        </li>
-
-
-    </ul>
 </div>
 
 
+<div class="main-body">
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <!--<div class="navbar-header">-->
+                <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">-->
+                <!--<span class="icon-bar"></span>-->
+                <!--<span class="icon-bar"></span>-->
+                <!--<span class="icon-bar"></span>-->
+                <!--</button>-->
+                <div class="navbar-brand" style="cursor: pointer;" onclick="clearLocalStorage()">Delete local storage</div>
+            <!--</div>-->
+            <!--<div class="collapse navbar-collapse" id="myNavbar">-->
+                <!--<ul class="nav navbar-nav">-->
+                    <!--&lt;!&ndash;<li class="active"><a href="#">Home</a></li>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<li><a href="#">Products</a></li>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<li><a href="#">Deals</a></li>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<li><a href="#">Stores</a></li>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<li><a href="#">Contact</a></li>&ndash;&gt;-->
+                <!--</ul>-->
+                <!--&lt;!&ndash;<ul class="nav navbar-nav navbar-right">&ndash;&gt;-->
+                <!--&lt;!&ndash;<li><a href="#"><span class="glyphicon glyphicon-user"></span> Your Account</a></li>&ndash;&gt;-->
+                <!--&lt;!&ndash;<li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>&ndash;&gt;-->
+                <!--&lt;!&ndash;</ul>&ndash;&gt;-->
+            <!--</div>-->
+        </div>
+    </nav>
+
+    <div class="container">
+        <div id="main-page">
+        <div class="row">
+
+                <div class="post-its">
+
+                    <div id="post-it-container">
+                        <div id="post-it-card" class="shadow">
+                            <div class="front face">
+                                <div class="strategy">Create your very own card</div>
+                            </div>
+                            <div class="back face center">
+                                <p>Give a name to your card</p>
+
+                                <!--nem lehet elküldeni enterrel-->
+                                <input style="margin-bottom:20px;" id="textform" type="text" name="name" placeholder="cardname">
+                                <button type="submit" id="save-button" data-label="save">save</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+        </div>
+    </div>
+    <br></div></div>
+
+<div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Modal Header</h4>
+      </div>
+      <textarea class="modal-body">
+      </textarea>
+      <div class="modal-footer">
+        <button type="button" id="#save-card" data-dismiss="modal">Save card</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<footer class="container-fluid text-center">
+    <p>This website was designed by the team members of Teemo to Hell.</p>
+</footer>
+
+<!--scripts-->
+<script src="static/js/data_manager.js"></script>
 <script src="static/js/java.js"></script>
+<!---->
 </body>
 </html>
-
