--- a/templates/index.html
+++ b/templates/index.html
@@ -50,8 +50,7 @@
         </div>
     </nav>
 
-    <div class="container">
-        <div id="main-page">
+    <div class="container" id="main-page">
         <div class="row">
 
                 <div class="post-its">
@@ -73,7 +72,6 @@
                 </div>
 
         </div>
-    </div>
     <br></div></div>
 
 <div id="myModal" class="modal fade" role="dialog">
