--- a/templates/card.html
+++ b/templates/card.html
@@ -14,7 +14,7 @@
     <div class="row">
         <div class="container">
             <div class="row">
-                <a href="/"><h1 class="col-lg-4">Teemo to hell</h1></a>
+                <a href="/"> <h1 class="col-lg-4">Teemo to hell</h1> </a>
                 <nav class="col-lg-8">
                     <a href="">menu 1</a>
                     <a href="">menu 2</a>
@@ -26,41 +26,20 @@
     </div>
 </header>
 
-
-
 <div id="container-head">
-    <p>Személyes táblák</p>
-
+    <p></p>
     <div class="panel">
-        <div class="header">Tábla készítése</div>
-        <b>Cím</b>
-        <form>
-            <input id="textform" type="text" name="name" placeholder="Például játék fejlesztési terv">
+                <div class="header">Tábla készítése</div>
+                <b>Cím</b>
+                <form>
+                    <input id="card_name" type="text" name="name" placeholder="Például játék fejlesztési terv">
 
-            <button id="save-button" data-label="do it!">do it!</button>
-        </form>
+                    <button id="save_card_button" data-label="do it!">do it!</button>
+                </form>
     </div>
-    <p class="slide"></p>
-    <div class="pull-me">Új tábla létrehozása..</div>
-
-    <ul id="grid-wrapper">
-
-        <li class="board">
-            <a href="/b" id="0">
-
-                <div class="container-board"></div>
-                <div class="title-bar">
-                    <div class="board-title">Üdvözlő kártya</div>
-                </div>
-            </a>
-        </li>
-
-
-    </ul>
+            <p class="slide"></p>
+            <div class="pull-me">Új kártya létrehozása..</div>
 </div>
-
-
 <script src="static/js/java.js"></script>
 </body>
 </html>
-
