--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" href="static/img/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="static/css/bootstrap.css" rel="stylesheet"/>
+{#    <link href="static/css/bootstrap.css" rel="stylesheet"/>#}
     <link href="static/css/card-animation.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -81,7 +81,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Modal Header</h4>
+        <input type="text" name="title" class="modal-title" id="titleName" value=""/>
       </div>
       <textarea class="modal-body">
       </textarea>
