--- a/static/css/style.css
+++ b/static/css/style.css
@@ -77,7 +77,7 @@ button {
 -----------------*/
 
 .modal-body {
-    height:250px;
+    min-height: 400px;
     width:100%;
 }
 
@@ -87,11 +87,11 @@ button {
     border-radius: 10px;
 }
 
-#modal-row, #modal-container, .col-xs-3{
-    height: 100%;
+#modal-row, #modal-container, .col-xs-3, .col-xs-12{
+    min-height: 400px;
 }
 
-.card-header {
+.status-header {
     margin-top: 10px;
     margin-right: 1px;
     border-bottom: solid;
@@ -100,11 +100,31 @@ button {
     font-weight: bold;
 }
 
-.card-header h4 {
+.status-header h4 {
     float: left;
 }
 
-#card-new-new, #card-in-progress-new, #card-review-new, #card-done-new {
+#new-card {
     float: right;
 }
 
+.card {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: black;
+    min-height: 100px;
+    border-width: thick;
+    border-color: black;
+    text-align: center;
+}
+
+.card textarea {
+    resize: none;
+    width:100%;
+    margin-top: 10px;
+    min-height: 80px;
+}
+
+.status-class {
+    min-height: inherit;
+}
