--- a/templates/tester.html
+++ b/templates/tester.html
@@ -4,36 +4,47 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-{#    <link href="static/css/bootstrap.css" rel="stylesheet"/>#}
+    {#
+    <link href="static/css/bootstrap.css" rel="stylesheet"/>
+    #}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="static/css/card-animation.css" rel="stylesheet"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 <div class="container" style="background:grey;min-height:550px;">
-        <div class="row">
+    <div class="row">
 
-                <div class="post-its">
+        <div class="post-its">
 
-                    <div id="post-it-container">
-                        <div id="post-it-card" class="shadow">
-                            <div class="front face">
-                                <div class="strategy">
-                                    <p style="margin-top:50px;font-size:25px;"> Title-változó </p>
-                                </div>
-                            </div>
-                            <div class="back face center">
-                                <div class="delete-modal">x</div>
-                                <div style="margin-top:50px;font-size:23px;" class="board-content btn" data-toggle="modal" data-button="fax" data-target="#myModal">
-                                    <p>Ez a szöveg már kicsúszik</p>
-                                </div>
-                            </div>
+            <div id="post-it-container">
+                <div id="post-it-card" class="shadow">
+                    <div class="front face">
+                        <div class="strategy">
+                            <p style="margin-top:50px;font-size:25px;"> Title-változó </p>
                         </div>
                     </div>
+                    <div class="back face center">
+                        <div style="font-size:23px; width:100%; height: 100%;" class="board-content btn"
+                             data-toggle="modal"
+                             data-button="fax" data-target="#myModal">
+                            <p>Enter card</p>
+                            <button type="button" class="btn btn-default btn-sm">
+                                <span class="glyphicon glyphicon-trash"></span> Trash
+                            </button>
+                        </div>
+
+                    </div>
                 </div>
-
-
+            </div>
         </div>
-    <br></div></div>
+
+
+    </div>
+    <br></div>
+</div>
 
 </body>
 </html>
