--- a/static/css/font.css
+++ b/static/css/font.css
@@ -4,7 +4,7 @@
 	src: local('KOMIKAX'), url('./KOMIKAX.woff') format('woff'), url('./KOMIKAX.ttf') format('truetype');
 }
 /* use this class to attach this font to any element i.e. <p class="fontsforweb_fontid_236">Text with this font applied</p> */
-.fontsforweb_fontid_236 {
+.main-body {
 	font-family: 'KOMIKAX' !important;
 }
 
