database: created cards and boards saved to the database, boards loads from the database

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,6 +46,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
     <br>
@@ -62,7 +63,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="row" id="modal-row">
-                        <div class="container" id="modal-container">
+                        <div class="container" id="modal-container" data-board="fsdhkl">
                             <div class="col-xs-3">
                                 <div class="col-xs-12 status">
                                     <div class="status-header">
@@ -70,6 +71,8 @@
                                         <button class="btn btn-primary" id="new-card">new card</button>
                                     </div>
                                     <div id="status-new" class="status-class">
+
+
                                     </div>
                                 </div>
                             </div>
