design and shadows

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,9 +23,9 @@
 
 
 <div class="main-body">
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar">
         <div class="container-fluid">
-            <div class="navbar-brand" style="cursor: pointer;" onclick="clearLocalStorage()">Delete local storage</div>
+            <!--<div class="navbar-brand"""></div>-->
         </div>
     </nav>
     <div class="container" id="main-page">
@@ -50,7 +50,7 @@
 
 <div class="container-fluid">
     <div id="board-modal" class="modal fade" role="dialog">
-        <div class="modal-dialog modal-lg" style="width: 100%">
+        <div class="modal-dialog modal-lg" style="width: 95%">
             <!-- Modal content-->
             <div class="modal-content" style="background-color: #ACB9B6">
                 <div class="modal-header" style="background-color: #25232E">
