--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,12 +16,14 @@
     /* Remove the navbar's default rounded borders and increase the bottom margin */
 .navbar {
     margin-bottom: 50px;
+    background-color: black;
+    min-height:25px;
     border-radius: 0;
 }
 
 /* Remove the jumbotron's default bottom margin */
 .jumbotron {
-    /*padding-bottom:60px;*/
+    padding:20px;
     font-family: 'KOMIKAX';
     color: ghostwhite;
     margin-bottom: 0;
@@ -133,8 +135,9 @@ button {
 }
 
 .card {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    box-shadow: 5px 5px 15px #888888;
+    margin-top: 20px;
+    margin-bottom: 25px;
     background-color: #D3FA80;
     min-height: 100px;
     border-width: thick;
@@ -152,6 +155,11 @@ button {
     background-color: #D3FA80;
     border: none;
 }
+
+.col-xs-12 {
+    box-shadow: 5px 5px 15px #888888;
+}
+
 
 .status-class {
     min-height: inherit;
